--- a/Front-End/src/css/multistep.css
+++ b/Front-End/src/css/multistep.css
@@ -4,6 +4,15 @@
     padding: 2rem;
   }
   
+  .registration-container h1 {
+    font-size: 3.5rem;
+    background: linear-gradient(45deg, var(--primary-color), #fff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-bottom: 3rem;
+  }
+
 .steps-indicator {
     display: flex;
     justify-content: space-between;
