--- a/Front-End/src/css/signin.css
+++ b/Front-End/src/css/signin.css
@@ -11,9 +11,12 @@
 }
 
 .signin-container h1 {
-  margin-bottom: 2rem;
-  text-align: center;
-  color: var(--light);
+  font-size: 3.5rem;
+  background: linear-gradient(45deg, var(--primary-color), #fff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  margin-bottom: 1rem;
 }
 
 .form-group {
